--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-  --color-primary: rgb(113, 29, 176);
+  --color-primary: #711db0;
   --color-secondary: #ffc0d9;
 }
 
@@ -158,6 +158,55 @@ h1 {
 }
 .bounce {
   animation: bounce 200ms ease-in-out 1;
+}
+
+.keyboard {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(2, auto);
+  justify-content: center;
+  margin-top: 2rem;
+  gap: 0.5rem;
+}
+.keyboard button {
+  width: 48px;
+  height: 48px;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  background: #ccc;
+  border: none;
+  border-radius: 12px;
+  box-shadow: 0 5px 0 0 rgba(0, 0, 0, 0.5);
+}
+.keyboard button:active {
+  transform: translateY(2px);
+  box-shadow: 0 3px 0 0 rgba(0, 0, 0, 0.75);
+}
+.keyboard img {
+  display: block;
+  width: 24px;
+}
+#up-btn {
+  grid-column: 2 / 3;
+}
+#up-btn img {
+  transform: rotate(-90deg);
+}
+#left-btn {
+  grid-column: 1 / 2;
+}
+#left-btn img {
+  transform: rotate(180deg);
+}
+#down-btn {
+  grid-column: 2 / 3;
+}
+#down-btn img {
+  transform: rotate(90deg);
+}
+#right-btn {
+  grid-column: 3 / 4;
 }
 
 @keyframes appear {
